[package]
name = "ctest_tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
structopt = "0.3.25"
clio = "0.1.8"

serde = "1.0.130"
serde_json = "1.0.71"

[dev-dependencies]
serde_test = "1.0.130"
assert_cmd = "2.0.2"
tempfile = "3.2.0"
